# lingxi-mas-studio

./: README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 4c2cc46d840c_create_sessions_table.py  9c18ee2aaa93_.py  d69fb8ec2c1e_create_files_table.py
backend/app/: __init__.py  main.py
backend/app/application/errors/: __init__.py  exceptions.py
backend/app/application/service/: __init__.py  agent_service.py  app_config_service.py  file_service.py  session_service.py  status_service.py
backend/app/domain/models/: __init__.py  app_config.py  event.py  file.py  health_status.py  memory.py  message.py  plan.py  search.py  session.py  tool_result.py
backend/app/domain/repositories/: __init__.py  app_config_repository.py  file_repository.py  session_repository.py  uow.py
backend/app/domain/services/: agent_task_runner.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/logging/: __init__.py  logging.py
backend/app/infrastructure/models/: __init__.py  base.py  file.py  session.py
backend/app/infrastructure/repositories/: __init__.py  db_file_repository.py  db_session_repository.py  db_uow.py  file_app_config_repository.py
backend/app/infrastructure/sandbox/: __init__.py  docker_sandbox.py
backend/app/infrastructure/storage/: __init__.py  cos.py  postgres.py  redis.py
backend/app/interfaces/: __init__.py  dependencies.py  repository_dependencies.py  service_dependencies.py
backend/core/: __init__.py  config.py
(+88 files in other folders)
